adds outbound icon to tiles; fixes tile styles

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -260,8 +260,31 @@ a, button {
 	margin-top: 0.5em;
 }
 
+/* outbound icon */
+.tile-icon {
+	position: absolute;
+	top: 0.5rem;
+	right: 0.5rem;
+	transform: scale(0.875);
+	transition: transform 0.2s ease-out;
+}
+
+.tile-icon path {
+	transition: fill 0.2s ease-out;
+}
+
+.tile:hover .tile-icon,
+.tile:focus .tile-icon {
+	transform: none;
+}
+
+.tile:hover .tile-icon path,
+.tile:focus .tile-icon path {
+	fill: #FFFFFF;
+}
+
 .darkglass.tile {
-	transition: 0.2s ease-out all;
+	transition: all 0.2s ease-out;
 	transition-property: border-color, transform;
 }
 
@@ -273,16 +296,16 @@ a, button {
 	top: -1px; right: -1px; bottom: -1px; left: -1px; /* behind border */
 	width: calc(100% + 2px);
 	height: calc(100% + 2px);
-	background-image: linear-gradient(225deg, rgba(247, 29, 226, 0.6) 0%, rgba(66, 198, 255, 0.6) 34%, rgba(61, 255, 128, 0.6) 100%);
+	background-image: linear-gradient(45deg, rgba(247, 29, 226, 0.6) 0%, rgba(66, 198, 255, 0.6) 34%, rgba(61, 255, 128, 0.6) 100%);
 	border-radius: 4px;
 	z-index: -1;
 	opacity: 0;
-	transition: 0.2s ease-out all;
-	transition-property: transform, box-shadow, border-color;
+	transition: all 0.2s ease-out;
+	transition-property: opacity, box-shadow, border-color;
 }
 .darkglass.tile:hover,
 .darkglass.tile:focus {
-	border-color: rgba(255, 255, 255, 0.25);
+	border-color: rgba(255, 255, 255, 0.425);
 	box-shadow: 0 1px 14px 0 rgba(255, 255, 255, 0.333);
 	transform: scale(1.0075);
 }
