--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -232,12 +232,41 @@ a, button {
 ------------------------------ */
 
 .wrapper {
-	padding-left: 1rem;
-	padding-right: 1rem;
+	padding-left: 2rem;
+	padding-right: 2rem;
 	margin-left: auto;
 	margin-right: auto;
 	max-width: 1400px;
 }
+
+
+/* ------------------------------
+* HERO
+------------------------------ */
+
+.hero {
+	padding-top: 20%;
+	min-height: 12rem;
+	margin-bottom: -0.75rem;
+}
+
+.hero-wrapper {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 100%;
+}
+
+.hero-img {
+	position: absolute;
+	top: 0; right: 0; bottom: 0; left: 0;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	z-index: -1;
+}
+
 
 /* ------------------------------
 * TILE
