--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -231,12 +231,67 @@ a, button {
 * LAYOUT
 ------------------------------ */
 
+html { font-size: 16px; }
+
+@media (min-width: 900px) {
+	html { font-size: 18px; }
+}
+@media (min-width: 1400px) {
+	html { font-size: 20px; }
+}
+
 .wrapper {
-	padding-left: 2rem;
-	padding-right: 2rem;
+	max-width: 1400px;
 	margin-left: auto;
 	margin-right: auto;
-	max-width: 1400px;
+	padding-left: 1rem;
+	padding-right: 1rem;
+}
+
+@media (min-width: 900px) {
+	.wrapper {
+		padding-left: 2rem;
+		padding-right: 2rem;
+	}
+}
+
+.bg {
+	position: fixed;
+	top: 0; right: 0; bottom: 0; left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: -2;
+}
+
+.bg-img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+
+/* ------------------------------
+* NAV
+------------------------------ */
+
+.nav {
+	background-color: #091A25;
+}
+
+.nav-inner {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: stretch;
+	justify-content: space-between;
+}
+
+.nav-logo {
+	height: 4rem;
+	padding-top: 0.625rem;
+}
+
+.nav-link {
+	line-height: 4rem;
 }
 
 
@@ -245,8 +300,8 @@ a, button {
 ------------------------------ */
 
 .hero {
-	padding-top: 20%;
-	min-height: 12rem;
+	padding-top: 22.25%; /* maintain aspect ratio */
+	min-height: 12rem; /* make sure there's room for text on small screens */
 	margin-bottom: -0.75rem;
 }
 
@@ -344,3 +399,11 @@ a, button {
 	opacity: 1;
 }
 
+
+/* ------------------------------
+* TOOLS PAGE
+------------------------------ */
+
+.tools-section {
+	margin-bottom: 1.5rem;
+}
