--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -286,8 +286,9 @@ html { font-size: 16px; }
 }
 
 .nav-logo {
-	height: 4rem;
-	padding-top: 0.625rem;
+	width: 11.8rem;
+	display: flex;
+	align-items: center;
 }
 
 .nav-link {
