adds navbar fixed positioning

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -278,6 +278,21 @@ html { font-size: 16px; }
 	background-color: #091A25;
 }
 
+/* fixed navbar on big screens */
+@media (min-width: 900px), (min-height: 900px) {
+	.nav {
+		position: fixed;
+		top: 0;
+		left: 0;
+		right: 0;
+		z-index: 10;
+		box-shadow: 0 1px 12px rgba(3, 9, 12, 0.5);
+	}
+	.nav + * {
+		margin-top: 4rem;
+	}
+}
+
 .nav-inner {
 	display: flex;
 	flex-wrap: wrap;
