--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -176,6 +176,7 @@ h1, .title {
 h2, h3, h4, h5, h6,
 .heading {
 	font-weight: 700;
+	margin-bottom: 1rem;
 }
 
 h2, .u-font-xxl {
@@ -322,6 +323,7 @@ html { font-size: 16px; }
 
 .nav {
 	background-color: #091A25;
+	background-color: rgba(9, 26, 37, 0.9666);
 }
 
 /* fixed navbar on big screens */
@@ -332,6 +334,7 @@ html { font-size: 16px; }
 		left: 0;
 		right: 0;
 		z-index: 10;
+		backdrop-filter: blur(6px);
 		box-shadow: 0 1px 12px rgba(3, 9, 12, 0.5);
 	}
 	.nav + * {
