adds tools layout, tweaks tile styles

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -456,20 +456,43 @@ html { font-size: 16px; }
 ------------------------------ */
 
 .tile {
-	display: block;
+	display: block; /* fallback */
+	display: flex;
 	text-align: center;
 	padding: 2.5rem;
 	margin-bottom: 1rem;
 }
 
+.tile-inner {
+	margin: auto;
+}
+
 .tile-img {
 	margin-left: auto;
 	margin-right: auto;
+	transition: transform 0.2s ease-out;
+}
+
+.tile-img:not([src*="logo"]) {
+	height: 2.1rem; /* 42px */
+	margin-top: 0.5rem;
+}
+
+.tile:hover .tile-img,
+.tile:focus .tile-img {
+	transform: scale(1.125);
 }
 
 .tile-img ~ * {
 	display: block;
-	margin-top: 0.5em;
+	margin-top: 0.75em;
+}
+
+.tile-title {
+	font-weight: 700;
+	letter-spacing: 0.5px;
+	line-height: 1.25;
+	text-transform: uppercase;
 }
 
 /* outbound icon */
@@ -533,5 +556,56 @@ html { font-size: 16px; }
 ------------------------------ */
 
 .tools-section {
-	margin-bottom: 1.5rem;
+	margin-bottom: 2rem;
+}
+
+/* progressively enhanced layout */
+@supports (display: grid) {
+	/* 2 columns */
+	@media (min-width: 600px) {
+		.tools-wrapper {
+			display: grid;
+			grid-template-columns: 1fr 2rem 1fr;
+		}
+
+		.tools-section:nth-child(1) { grid-column: 1/4; }
+		.tools-section:nth-child(2) { grid-column: 1/2; }
+		.tools-section:nth-child(3) { grid-column: 3/4; }
+
+		.tools-heading {
+			text-align: center;
+		}
+
+		.tools-item:last-child .tile {
+			margin-bottom: 0;
+		}
+
+		/* magic number to keep tiles vertically aligned when text breaks */
+		.tools-item .tile {
+			min-height: 200px;
+		}
+	}
+
+	/* 3 columns */
+	@media (min-width: 900px) {
+		.tools-wrapper {
+			grid-template-columns: 1fr 2rem 1fr 2rem 1fr;
+		}
+
+		.tools-section:nth-child(1) { grid-column: 1/2; }
+		.tools-section:nth-child(2) { grid-column: 3/4; }
+		.tools-section:nth-child(3) { grid-column: 5/6; }
+
+		/* equal height columns */
+		.tools-section,
+		.tools-list {
+			display: flex;
+			flex-direction: column;
+		}
+		.tools-list,
+		.tools-item:only-child,
+		.tools-item:only-child > .tile {
+			height: 100%;
+		}
+	}
 }
